[package]
name = "py-hetnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_hetnet"
crate-type = ["cdylib"]

[dependencies]
error_set = "0.8.5"
pyo3 = "0.25.1"
rand = "0.9.1"
hetnet = { path = "./rust/hetnet" }
rayon = "1.11.0"
