[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "hetnet"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "neo4j",
    "graphviz",
    "torch",
    "torch_geometric",
    "torch_cluster",
    "matplotlib",
    "networkx"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "hetnet._hetnet"


[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]
